# halloy

./: CHANGELOG.md  Cargo.toml  Justfile  flake.nix
data/: Cargo.toml
data/src/: buffer.rs  client.rs  config.rs  lib.rs  message.rs  whois.rs
data/src/appearance/: theme.rs
data/src/config/: buffer.rs
data/src/message/: formatting.rs
docs/configuration/: buffer.md
src/: buffer.rs  main.rs
src/appearance/theme/: selectable_text.rs
src/buffer/: channel.rs  context_menu.rs  highlights.rs  input_view.rs  logs.rs  message_view.rs  query.rs  scroll_view.rs  server.rs  typing.rs
src/screen/: dashboard.rs
src/screen/dashboard/: command_bar.rs
src/widget/: combo_box.rs  tooltip.rs
tui/: Cargo.toml
tui/src/: app.rs  event.rs  keybinds.rs  main.rs  theme.rs
tui/src/ui/: command_bar.rs  input.rs  messages.rs  mod.rs  sidebar.rs  statusbar.rs
